# MDBSL

./: .gitignore  CMakeLists.txt  README.md
Experiments/: AllOneExperiment.cpp  AllOneExperiment.h  FastSim_1DPhototaxis.cpp  FastSim_Diversity_Compass.cpp  FastSim_Diversity_Compass.h  FastSim_Flower_Poison.cpp  FastSim_Flower_Poison.h  FastSim_Forage_Wall.cpp  FastSim_Forage_Wall.h  FastSim_MultiRobot_Phototaxis.cpp  FastSim_MultiRobot_Phototaxis.h  FastSim_MultiRobot_Phototaxis_Compass.cpp  FastSim_MultiRobot_Phototaxis_Compass.h  FastSim_MultiRobot_WallAvoidance.cpp  FastSim_MultiRobot_WallAvoidance.h  FastSim_Phototaxis.cpp  FastSim_Phototaxis.h  FastSim_Phototaxis_Compass.cpp  FastSim_Phototaxis_Compass.h  FastSim_Phototaxis_DistanceFit.cpp  FastSim_Phototaxis_DistanceFit.h  XOR_Experiment.cpp  XOR_Experiment.h
MDB_SocialLearning/: Babbling.hpp  BabblingPolicy.cpp  BabblingPolicy.h  BabblingStandard.cpp  BabblingStandard.h  CMakeLists.txt  CaffeDeepNet.cpp  CaffeDeepNet.h  ECF.cpp  ECF.h  FamiliarityTester.cpp  FamiliarityTester.h  FastSimSimulator.cpp  FastSimSimulator.h  FastSim_1DPhototaxis.h  FeedforwardNN.cpp  FeedforwardNN.h  FitnessLibrary.hpp  GALibrary.hpp  GaussianProcess.cpp  GaussianProcess.h  GeneticAlgorithm.cpp  GeneticAlgorithm.hpp  Manager.cpp  Manager.h  Memory.cpp  Memory.hpp  MemoryLibrary.hpp  Model.hpp  ModelLibrary.hpp  ModelManager.cpp  ModelManager.h  MultiFeedforwardNeuralNetwork.cpp  MultiFeedforwardNeuralNetwork.h  Policy.cpp  Policy.h  PolicyMemory.hpp  RandomGenerators.cpp  RandomGenerators.h  ResourceLibrary.cpp  (+24 more)
MDB_SocialLearning/ann/ann2fig/: ann2fig.cpp
RobotExperimentViewer/RobotExperimentViewer/: Makefile.RobotExperimentView_App  Makefile.RobotExperimentView_Library  RobotExperimentView_App.pro  RobotExperimentView_Library.pro  RobotExperimentViewer.pro  main.cpp  moc_neuralnetworkviewer.cpp  moc_rev.cpp  moc_revinputviewer.cpp  neuralnetworkviewer.cpp  neuralnetworkviewer.h  rev.cpp  rev.h  revinit.cpp  revinit.h  revinputviewer.cpp  revinputviewer.h
Scripts/Lisa/: generateLisaScript.py  generateLisaScript2.py  generateMulticoreLisaScript.py  generateMulticoreLisaScript2.py
Tests/: CMakeLists.txt  CaffeTest.hpp  TestMain.cpp  UnitTest.CaffeModel.prototxt  UnitTest.CaffeSolver.prototxt  UnitTest.cfg  XOR_iter_1000000.caffemodel  XOR_iter_1000000.solverstate  XOR_iter_2000000.caffemodel  XOR_iter_2000000.solverstate  XOR_iter_3000000.caffemodel  XOR_iter_3000000.solverstate  XOR_iter_4000000.caffemodel  XOR_iter_4000000.solverstate  XOR_iter_5000000.caffemodel  XOR_iter_5000000.solverstate
Tools/: compileReformatRewardPropagation.sh  reformatRewardPropagation.cpp  testFeedforwardNetwork.cfg  testFeedforwardNetwork.cpp
